# Env_mon

./: .gitignore  CMakeLists.txt  PROJECT_REPORT.docx  README.md  claim-policy.json  deploy.ps1  package-lock.json  sdkconfig.defaults  vercel.json
aws_setup/: api_gateway_setup.md  dynamodb_schema.md  fleet_provisioning_template.json  iot_core_setup.md  iot_policy.json  iot_rule_to_lambda.json  sns_fire_alert.md
backend/iot/: device-policy.json.tpl  fleet-provisioning-template.json.tpl
backend/terraform/: main.tf  outputs.tf  variables.tf  vercel.auto.tfvars
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  api.js  auth.js  deviceUtils.js  fireAlarm.js  index.css  main.jsx  mappls.js  mqttClient.js
dashboard/src/pages/: Live.jsx  (+11 more)
docs/: API.md  ARCHITECTURE.md  AWS_DEPLOYMENT.md  BUILD_AND_FLASH.md  DEBUGGING.md  DEMO_GUIDE.md  DEPLOYMENT.md
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/lib/: main.dart  theme.dart
lambda/: README.md  index.js  index.mjs  package.json  policy.json  requirements.txt
main/: CMakeLists.txt  cert_store.c  cert_store.h  config_store.c  config_store.h  fleet_provisioning.c  fleet_provisioning.h  idf_component.yml  main.c  ota_manager.c  ota_manager.h  provisioning.c  provisioning.h  shadow_manager.c  shadow_manager.h  wifi.c  wifi.h
mobile_app_android/: README.md  build_apk.ps1  settings.gradle
mobile_app_android/app/: build.gradle
provision_app/: README.md  index.html
scripts/: patch_template.ps1  reset_thing.ps1  restore_template.ps1
(+23 files in other folders)
